@@ -3,6 +3,7 @@ CHANGELOG
 2.1.19
 UTIL:
 * different classes | improve usage of flag 'XML_PARSE_BIG_LINES' in method loadXML
+* class PANConf / Panoramaconfg | implement method ChildDeviceGroups() for 'location=shared:excludemaindg'
 
 BUGFIX:
 
